Updated project setup and dependencies